fisrt fetch form product 2/3

--- a/src/public/html/products.html
+++ b/src/public/html/products.html
@@ -18,7 +18,7 @@
         <div class="card my-5">
             <div class="card-header d-flex justify-content-around text-center">
                 <h1>
-                    Profile
+                    Product's List
                 </h1>
                 
             </div>
@@ -50,7 +50,7 @@
                                 <img id="file_upload" src="http://placehold.it/70" alt="your image" class="upload-img" />
                                 <div class="input-file-upload">
                                     <span class="upload-label">Upload Image</span>
-                                    <input id="file" name="img" type='file' onchange="readURL(this);" />
+                                    <input id="file" name="file" type='file' onchange="readURL(this);" />
                                 </div>
                             </div>
                         </div>
