--- a/src/public/html/products.html
+++ b/src/public/html/products.html
@@ -25,9 +25,10 @@
                       Menu
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="/">Home</a></li>
+                      <li><a class="dropdown-item" href="/logged">Chat</a></li>
+                      <li><a class="dropdown-item" href="">Chart</a></li>
+                      <li><a class="dropdown-item" href="/">Contact</a></li>
                     </ul>
                 </div>
 
@@ -53,7 +54,7 @@
                                     Name
                                 </label>
                                 <input id="name" name="name" type="text">
-                                <span class="right">Enter name no longer than 5 characters</span>
+                                <span class="right">No longer than 5 characters</span>
                             </div class="input_group">
                             <div class="input_group">
                                 <label for="price">
