--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,15 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- input file -->
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- animate css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/adda471c88.js" crossorigin="anonymous"></script>
     <title>WELCOME</title>
 </head>
 <body>
     <div class="container d-flex" style="justify-content:center;">
-        <div class="card my-5">
+        <div class="card my-5 animate__animated animate__bounceInLeft">
             <div class="card-body text-center">
-                <a href="/login" class="btn btn-primary m-2">Log In</a>
-                <a href="/signup" class="btn btn-primary m-2">Sign Up</a>
+                <div class="button_group">
+                    <a href="/login" class="btn btn-primary m-2">Log In</a>
+                    <a href="/signup" class="btn btn-primary m-2">Sign Up</a>
+                </div>
+                <nav class="m-2 animate__animated animate__flipInX" aria-label="Page navigation example">
+                    <ul class="pagination">
+                      <li class="page-item"><a class="page-link" href="/">Home</a></li>
+                      <li class="page-item"><a class="page-link" href="/products">Products</a></li>
+                      <li class="page-item"><a class="page-link" href="/">Cart</a></li>
+                      <li class="page-item"><a class="page-link" href="/logged">Chat</a></li>
+                      <li class="page-item"><a class="page-link" href="/">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
