add product category 3/3

--- a/src/public/html/products.html
+++ b/src/public/html/products.html
@@ -54,7 +54,17 @@
                                     Name
                                 </label>
                                 <input id="name" name="name" type="text">
-                                <span class="right">No longer than 5 characters</span>
+                                <span class="right">No longer than 15 characters</span>
+                            </div class="input_group">
+                            <div class="input_group">
+                                <label for="category">
+                                    Category
+                                </label>
+                                <select id="category" name="category" class="form-select" aria-label="Default select example">
+                                    <option selected disabled>Select category</option>
+                                    <option value="shoes">Shoes</option>
+                                    <option value="clothing">Clothing</option>
+                                </select>
                             </div class="input_group">
                             <div class="input_group">
                                 <label for="price">
