spinner btn post product completed

--- a/src/public/html/products.html
+++ b/src/public/html/products.html
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="button_group mb-3">
-                        <input type="submit" id="submit" value="Publicar" class="button_group_button">
+                        <button type="submit" id="btnPost" class="button_group_button">Post product</button>
                     </div class="input_group">
                 </form>
 
