edit product fetch completed

--- a/src/public/html/products.html
+++ b/src/public/html/products.html
@@ -42,7 +42,7 @@
         <div id="contentContainer">
             <!--  <img class="profileImg" href="../imgs/1646611653322-large.png" alt="foto perfil"> -->
             
-
+            
             <div class="productsContainer card-body">
                 <form id="productsForm" class="animate__animated animate__flipInX" action="/products" method="post">
                     <ul id="errors"></ul>
@@ -77,10 +77,10 @@
                             <span class="right">Please only number characters</span>
                         </div class="input_group">
                         <div class="input-file">
-                            <img id="file_upload" alt="your img" class="upload-img" />
+                            <img id="file_upload" alt="" class="upload-img" />
                             <div class="input-file-upload">
                                 <span class="upload-label">Upload Image</span>
-                                <input id="file" name="file" type='file' onchange="readURL(this);" />
+                                <input id="file" name="file" type='file' onchange="readURL(this)" />
                             </div>
                         </div>
                     </div>
