--- a/src/public/html/signup.html
+++ b/src/public/html/signup.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
-
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
+    <!-- animate css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/adda471c88.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="../css/signup.css" >
     <script defer src="../js/signup.js"></script>
 </head>
@@ -15,7 +19,7 @@
 
   <div id="header">
     <div class="logo">
-      <img src="../imgs/1659042231170-$.jpg" alt="logo">
+      <img src="../imgs/1659042231170-$.jpg" alt="logo" height="30px" >
       <a href="#">X Project</a>
     </div>  
     <nav>
@@ -24,59 +28,34 @@
       </form>
       <ul>
         <li>
-          <a href="">Home</a>
+          <a href="/"><i class="fa-solid fa-house"></i> Home</a>
         </li>
         <li>
-          <a href="">About</a>
-          <ul class="mega-dropdown">
-            <li class="row">
-              <ul class="mega-col">
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-              <ul class="mega-col">
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Services</a></li>
-              </ul>
-              <ul class="mega-col">
-                <li><a href="#">Coming Soon</a></li>
-                <li><a href="#">404 Error</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="#">Author Page</a></li>
-              </ul>
-              <ul class="mega-col">
-                <li><a href="#">Full Width</a></li>
-                <li><a href="#">Right Column</a></li>
-                <li><a href="#">Left Column</a></li>
-                <li><a href="#">Maintenance</a></li>
-              </ul>
-            </li>
-          </ul>        
+          <a href="/signup">Sign Up</a>       
+        </li>
+        <li>
+          <a href="/login">Log In</a>       
         </li>
         <li class="dropdown">
-          <a href="">Contact</a>
+          <a href="https://github.com/jsebast1an/portfolio" target="_blank">Portfolio</a>
             <ul>
-              <li><a href="#">About Version</a></li>
-              <li><a href="#">About Version</a></li>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a target="_blank" href="https://github.com/jsebast1an/portfolio">All projects <i class="fa-brands fa-github"></i></a></li>
+              <li><a target="_blank" href="https://flamboyant-perlman-99b3f2.netlify.app/">React Store App <i class="fa-brands fa-react"></i></a></li>
+              <li><a target="_blank" href="https://jsebast1an.github.io/LaFarola/">Static Web <i class="fa-solid fa-file-code"></i></a></li>
+              <li><a target="_blank" href="https://jsebast1an.github.io/LaFarola2/">JS & HTML Store App <i class="fa-brands fa-square-js"></i></a></li>
             </ul>        
         </li>
         <li>
-          <a href="">Portfolio</a>
+          <a href="">Products</a>
         </li>
         <li>
-          <a href="">Team</a>
+          <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
         </li>
       </ul>
     </nav>
   </div>
 
-  <div class="flexColumnCenterContainer">
+  <div class="flexColumnCenterContainer " >
     <div class="formContainer">
       <div id="errors" class="m-2 p-1">
   
