--- a/src/public/html/products.html
+++ b/src/public/html/products.html
@@ -17,6 +17,43 @@
     <link rel="stylesheet" href="../css/products.css" >
 </head>
 <body>
+    <div id="header">
+        <div class="logo">
+          <img src="../imgs/1659042231170-$.jpg" alt="logo" height="30px" >
+          <a href="#">X Project</a>
+        </div>  
+        <nav>
+          <form class="search" action="search.php"> 
+            <input name="q" placeholder="Search..." type="search">
+          </form>
+          <ul>
+            <li>
+              <a href="/"><i class="fa-solid fa-house"></i> Home</a>
+            </li>
+            <li>
+              <a id="nav_username" href="/"></a>       
+            </li>
+            <li>
+              <a href="/login">Log In</a> 
+            </li>
+            <li class="dropdown">
+              <a href="https://github.com/jsebast1an/portfolio" target="_blank">Portfolio</a>
+                <ul>
+                  <li><a target="_blank" href="https://github.com/jsebast1an/portfolio">All projects <i class="fa-brands fa-github"></i></a></li>
+                  <li><a target="_blank" href="https://flamboyant-perlman-99b3f2.netlify.app/">React Store App <i class="fa-brands fa-react"></i></a></li>
+                  <li><a target="_blank" href="https://jsebast1an.github.io/LaFarola/">Static Web <i class="fa-solid fa-file-code"></i></a></li>
+                  <li><a target="_blank" href="https://jsebast1an.github.io/LaFarola2/">JS & HTML Store App <i class="fa-brands fa-square-js"></i></a></li>
+                </ul>        
+            </li>
+            <li>
+              <a href="">Products</a>
+            </li>
+            <li>
+              <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+            </li>
+          </ul>
+        </nav>
+    </div>
     <div class="cardContainer card my-5">
         <div class="card-header d-flex justify-content-between text-center align-items-center">
             <div class="dropdown">
@@ -80,7 +117,7 @@
                             <img id="file_upload" alt="" class="upload-img" />
                             <div class="input-file-upload">
                                 <span class="upload-label">Upload Image</span>
-                                <input id="file" name="file" type='file' onchange="readURL(this)" />
+                                <input id="file" name="file" type='file' accept="image/*" multiple onchange="readURL(this)" />
                             </div>
                         </div>
                     </div>
